chore: update rollup so we can get the --failAfterWarnings flag to catch a failed build, add rollup alias plugin so we can import using the @ alias like in our webpack code (the cause of the failed build), update Sentry at the same time because why not, change all import to use the @ alias, move some code around to keep the service worker from having to import misc/helpers.js

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "serve:debug": "BROWSERSLIST_ENV=debug vue-cli-service serve",
-    "build": "vue-cli-service build && rollup -c && workbox injectManifest",
+    "build": "vue-cli-service build && rollup -c --failAfterWarnings && workbox injectManifest",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint src/ tests/ sw-src/",
@@ -19,8 +19,8 @@
     "analyse-bundle": "yarn build && webpack-bundle-analyzer dist/stats.json"
   },
   "dependencies": {
-    "@sentry/browser": "^5.24.2",
-    "@sentry/integrations": "^5.24.2",
+    "@sentry/browser": "^5.27.2",
+    "@sentry/integrations": "^5.27.2",
     "base64-js": "^1.3.1",
     "comlink": "4.2.0",
     "core-js": "3.6.4",
@@ -60,6 +60,7 @@
     "worker-plugin": "3.2.0"
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^3.1.1",
     "@sentry/webpack-plugin": "^1.8.0",
     "@types/lodash": "^4.14.132",
     "@vue/cli-plugin-babel": "^4.1.1",
@@ -86,10 +87,10 @@
     "firebase-tools": "^6.10.0",
     "nodemon": "^2.0.0",
     "promise-worker": "2.0.1",
-    "rollup": "^1.27.2",
+    "rollup": "^2.33.1",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-sourcemaps": "^0.6.2",
+    "rollup-plugin-sourcemaps": "^0.6.3",
     "sass-loader": "^8.0.0",
     "servor": "^2.2.1",
     "vue-template-compiler": "^2.6.10",
