feat: GH-69 add migration to move photos out into their own records, add admin feature to generate fixture for testing migration code, add another IndexedDB to track data *about* the app like which migrations have been applied, make sure workers are linted during build

--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "build": "vue-cli-service build && rollup -c --failAfterWarnings && workbox injectManifest",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint src/ tests/ sw-src/",
-    "lint:check": "vue-cli-service lint --no-fix --max-warnings 0 src/ tests/ sw-src/ vue-config/",
+    "lint": "yarn lint:workers && vue-cli-service lint src/ tests/ sw-src/ vue-config/",
+    "lint:check": "yarn lint --no-fix --max-warnings 0",
     "lint:check:scripts": "vue-cli-service lint --no-fix --max-warnings 0 scripts/",
+    "lint:workers": "find src sw-src -type f -name '*.worker.js' -exec vue-cli-service lint --no-ignore --no-fix --max-warnings 0 '{}' \\;",
     "build:serve": "BROWSERSLIST_ENV=debug DISABLE_MINIFY=1 VUE_APP_FORCE_VUE_DEVTOOLS=1 yarn build && servor dist/ index.html --no-browser",
     "build:serve:watch": "nodemon --ext vue,js,mjs,json --delay 2 --watch src --watch sw-src --watch package.json --exec bash -c 'yarn build:serve'",
     "firebase:deploy:ci": "doit() { firebase --non-interactive --token ${FIREBASE_TOKEN:?} deploy --only hosting:${1:?}; }; doit",
