--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "fuse.js": "^5.0.10-beta",
     "is_js": "^0.9.0",
     "jwt-decode": "^2.2.0",
-    "localforage": "^1.9.0",
+    "localforage": "ternandsparrow/localForage#gh-910",
     "lodash": "^4.17.11",
     "ml5": "^0.5.0",
     "onsenui": "^2.11.1",
