--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "analyse-bundle": "yarn build && webpack-bundle-analyzer dist/stats.json"
   },
   "dependencies": {
+    "@chriscdn/promise-semaphore": "^1.0.6",
     "@sentry/browser": "^5.27.2",
     "@sentry/integrations": "^5.27.2",
     "base64-js": "^1.3.1",
