--- a/package.json
+++ b/package.json
@@ -21,24 +21,24 @@
   },
   "dependencies": {
     "@chriscdn/promise-semaphore": "^1.0.6",
-    "@sentry/browser": "^5.27.2",
-    "@sentry/integrations": "^5.27.2",
+    "@sentry/browser": "^5.30.0",
+    "@sentry/integrations": "^5.30.0",
     "base64-js": "^1.3.1",
     "comlink": "4.2.0",
     "core-js": "3.6.4",
     "dayjs": "^1.8.26",
     "dms2dec": "^1.1.0",
-    "exif-js": "https://github.com/ternandsparrow/exif-js#gh-63-outside-bounds",
+    "exif-js": "git+https://github.com/ternandsparrow/exif-js.git#gh-63-outside-bounds",
     "exif-reader": "^1.0.3",
     "fetch-retry": "^2.2.3",
     "formdata-polyfill": "https://github.com/ternandsparrow/FormData#safari13.1-attempt2-installable",
     "fuse.js": "^5.0.10-beta",
     "is_js": "^0.9.0",
     "jwt-decode": "^2.2.0",
-    "localforage": "ternandsparrow/localForage#gh-910",
+    "localforage": "github:ternandsparrow/localForage#gh-910",
     "lodash": "^4.17.11",
     "ml5": "^0.5.0",
-    "onsenui": "^2.11.1",
+    "onsenui": "^2.11.2",
     "pkce-challenge": "^2",
     "pwacompat": "^2.0.9",
     "register-service-worker": "^1.6.2",
@@ -53,7 +53,7 @@
     "vue-router": "3.0.7",
     "vue2-google-maps": "0.10.7",
     "vuex": "^3.1.1",
-    "vuex-persistedstate": "^3",
+    "vuex-persistedstate": "^3.2.0",
     "workbox-background-sync": "^5.1.3",
     "workbox-cli": "^5.1.3",
     "workbox-precaching": "^5.1.3",
