--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "core-js": "3.6.4",
     "dayjs": "^1.8.26",
     "dms2dec": "^1.1.0",
+    "elliptic": "^6.5.4",
     "exif-js": "git+https://github.com/ternandsparrow/exif-js.git#gh-63-outside-bounds",
     "exif-reader": "^1.0.3",
     "fetch-retry": "^2.2.3",
@@ -44,6 +45,7 @@
     "register-service-worker": "^1.6.2",
     "sass": "^1.21.0",
     "smoothscroll-polyfill": "^0.4.4",
+    "sockjs": "^0.3.20",
     "stackdriver-error-reporting-clientside-js-client": "https://github.com/ternandsparrow/stackdriver-error-reporting-clientside-js-client#v0.1.0",
     "uuid": "^3.3.3",
     "vue": "^2.6.10",
@@ -59,7 +61,8 @@
     "workbox-precaching": "^5.1.3",
     "workbox-routing": "^5.1.3",
     "workbox-strategies": "^5.1.3",
-    "worker-plugin": "3.2.0"
+    "worker-plugin": "3.2.0",
+    "y18n": "^4.0.1"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.1",
