--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "formdata-polyfill": "https://github.com/ternandsparrow/FormData#safari13.1-attempt2-installable",
     "fuse.js": "^5.0.10-beta",
     "ini": "^1.3.6",
+    "is-svg": "^4.2.2",
     "is_js": "^0.9.0",
     "jwt-decode": "^2.2.0",
     "localforage": "github:ternandsparrow/localForage#gh-910",
