--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "fetch-retry": "^2.2.3",
     "formdata-polyfill": "https://github.com/ternandsparrow/FormData#safari13.1-attempt2-installable",
     "fuse.js": "^5.0.10-beta",
+    "highlight.js": "^10.4.1",
     "ini": "^1.3.6",
     "is-svg": "^4.2.2",
     "is_js": "^0.9.0",
