upgrade http-proxy to 1.18.1, ini to 1.3.7

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "formdata-polyfill": "https://github.com/ternandsparrow/FormData#safari13.1-attempt2-installable",
     "fuse.js": "^5.0.10-beta",
     "highlight.js": "^10.4.1",
-    "ini": "^1.3.6",
+    "http-proxy": "^1.18.1",
+    "ini": "^1.3.7",
     "is-svg": "^4.2.2",
     "is_js": "^0.9.0",
     "jwt-decode": "^2.2.0",
