--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "fetch-retry": "^2.2.3",
     "formdata-polyfill": "https://github.com/ternandsparrow/FormData#safari13.1-attempt2-installable",
     "fuse.js": "^5.0.10-beta",
+    "gmap-vue": "^3.5.2",
     "highlight.js": "^10.4.1",
     "http-proxy": "^1.18.1",
     "ini": "^1.3.7",
@@ -58,7 +59,6 @@
     "vue-head": "^2.1.1",
     "vue-onsenui": "^2.6.2",
     "vue-router": "3.0.7",
-    "vue2-google-maps": "0.10.7",
     "vuex": "^3.1.1",
     "vuex-persistedstate": "^3.2.0",
     "workbox-background-sync": "^5.1.3",
