--- a/package.json
+++ b/package.json
@@ -160,8 +160,7 @@
   },
   "_id": "wild-orchid-watch-pwa@0.1.0",
   "engines": {
-    "npm": ">=5.5.0",
-    "node": ">=8.16.0"
+    "node": "^12"
   },
   "readme": "README.md"
 }
