--- a/package.json
+++ b/package.json
@@ -4,28 +4,24 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "serve:debug": "BROWSERSLIST_ENV=debug vue-cli-service serve",
     "build": "vue-cli-service build && rollup -c --failAfterWarnings && workbox injectManifest",
     "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e",
-    "lint": "yarn lint:workers && yarn lint:main",
-    "lint:check": "yarn lint --no-fix --max-warnings 0",
-    "lint:check:scripts": "vue-cli-service lint --no-fix --max-warnings 0 scripts/",
-    "lint:main": "vue-cli-service lint src/ tests/ sw-src/ vue-config/",
-    "lint:workers": "find src sw-src -type f -name '*.worker.js' -exec vue-cli-service lint --no-ignore --max-warnings 0 '{}' \\;",
+    "analyse-bundle": "yarn build && webpack-bundle-analyzer dist/stats.json",
     "build:serve": "BROWSERSLIST_ENV=debug DISABLE_MINIFY=1 VUE_APP_FORCE_VUE_DEVTOOLS=1 yarn build && servor dist/ index.html --no-browser",
     "build:serve:watch": "nodemon --ext vue,js,mjs,json --delay 2 --watch src --watch sw-src --watch package.json --exec bash -c 'yarn build:serve'",
     "firebase:deploy:ci": "doit() { firebase --non-interactive --token ${FIREBASE_TOKEN:?} deploy --only hosting:${1:?}; }; doit",
-    "test:e2e:headless": "vue-cli-service test:e2e --headless",
-    "test:unit:debug": "node --inspect-brk ./node_modules/.bin/vue-cli-service test:unit --runInBand",
-    "analyse-bundle": "yarn build && webpack-bundle-analyzer dist/stats.json"
+    "lint": "vue-cli-service lint src/ tests/ vue-config/ sw-src/",
+    "lint:specified": "vue-cli-service lint",
+    "lint:check": "yarn lint --no-fix --max-warnings 0",
+    "lint:check:scripts": "vue-cli-service lint --no-fix --max-warnings 0 scripts/",
+    "serve:debug": "BROWSERSLIST_ENV=debug vue-cli-service serve",
+    "test:unit:debug": "node --inspect-brk ./node_modules/.bin/vue-cli-service test:unit --runInBand"
   },
   "dependencies": {
     "@sentry/browser": "^6.17.9",
     "@sentry/integrations": "^6.17.9",
     "base64-js": "^1.3.1",
     "comlink": "4.2.0",
-    "core-js": "3.6.4",
     "dayjs": "^1.8.26",
     "dms2dec": "^1.1.0",
     "elliptic": "^6.5.4",
@@ -41,12 +37,11 @@
     "is-svg": "^4.2.2",
     "is_js": "^0.9.0",
     "jwt-decode": "^2.2.0",
-    "localforage": "github:ternandsparrow/localForage#gh-910",
+    "localforage": "^1.10.0",
     "lodash": "^4.17.11",
-    "ml5": "^0.5.0",
     "node-notifier": "^8.0.1",
-    "onsenui": "^2.11.2",
-    "pkce-challenge": "^2",
+    "onsenui": "^2.12.0",
+    "pkce-challenge": "^3.0.0",
     "pwacompat": "^2.0.9",
     "register-service-worker": "^1.6.2",
     "sass": "^1.21.0",
@@ -54,10 +49,10 @@
     "sockjs": "^0.3.20",
     "stackdriver-error-reporting-clientside-js-client": "https://github.com/ternandsparrow/stackdriver-error-reporting-clientside-js-client#v0.1.0",
     "uuid": "^3.3.3",
-    "vue": "^2.6.10",
+    "vue": "^2",
     "vue-analytics": "^5.17.2",
     "vue-head": "^2.1.1",
-    "vue-onsenui": "^2.6.2",
+    "vue-onsenui": "^2.7.0",
     "vue-router": "3.0.7",
     "vuex": "^3.1.1",
     "vuex-persistedstate": "^3.2.0",
@@ -66,47 +61,44 @@
     "workbox-precaching": "^6.5.3",
     "workbox-routing": "^6.5.3",
     "workbox-strategies": "^6.5.3",
-    "worker-plugin": "3.2.0",
     "y18n": "^4.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.16",
     "@rollup/plugin-alias": "^3.1.1",
     "@sentry/webpack-plugin": "^1.8.0",
     "@types/lodash": "^4.14.132",
-    "@vue/cli-plugin-babel": "^4",
-    "@vue/cli-plugin-e2e-cypress": "^4",
-    "@vue/cli-plugin-eslint": "^4",
-    "@vue/cli-plugin-pwa": "^4",
-    "@vue/cli-plugin-unit-jest": "^4",
-    "@vue/cli-service": "^4",
-    "@vue/eslint-config-prettier": "^5.0.0",
+    "@vue/cli-plugin-babel": "~5.0.4",
+    "@vue/cli-plugin-eslint": "~5.0.4",
+    "@vue/cli-plugin-pwa": "~5.0.4",
+    "@vue/cli-plugin-unit-jest": "~5.0.4",
+    "@vue/cli-service": "~5.0.4",
+    "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/test-utils": "^1.0.0-beta.29",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
+    "@vue/vue2-jest": "^27",
+    "babel-jest": "^27",
     "babel-plugin-lodash": "^3.3.4",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-google": "^0.13.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-vue": "^5.2.2",
-    "fake-indexeddb": "^3.1.2",
-    "favicons-webpack-plugin": "^2",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^9.0.1",
+    "fake-indexeddb": "^3.1.7",
+    "favicons": "^6",
+    "favicons-webpack-plugin": "^5.0.2",
     "firebase-tools": "^6.10.0",
+    "jest": "^27.1.0",
     "nodemon": "^2.0.0",
-    "promise-worker": "2.0.1",
+    "prettier": "^2.6.2",
     "rollup": "^2.33.1",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
-    "sass-loader": "^8.0.0",
+    "sass-loader": "^13.0.0",
     "servor": "^2.2.1",
-    "vue-template-compiler": "^2.6.10",
+    "vue-template-compiler": "^2",
     "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-merge": "^4.2.1",
-    "worker-loader": "2.0.0"
+    "webpack-merge": "^4.2.1"
   },
   "postcss": {
     "plugins": {
@@ -158,9 +150,8 @@
       "/node_modules/(?!workbox-).+\\.js$"
     ]
   },
-  "_id": "wild-orchid-watch-pwa@0.1.0",
   "engines": {
-    "node": "^12"
+    "node": ">=16"
   },
   "readme": "README.md"
 }
