--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,10 @@ jobs:
 
       - run:
           name: 'Install dependencies'
-          command: yarn install --frozen-lockfile
+          command: |
+            apt update
+            apt install -y git
+            yarn install --frozen-lockfile
 
       - save_cache:
           paths:
