--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build && rollup -c --failAfterWarnings && workbox injectManifest",
+    "build:resource-constrained": "IS_ENABLE_ESLINT=false IS_ENABLE_BUNDLE_ANALYZER=false IS_ENABLE_SOURCEMAPS=false yarn build",
     "test:unit": "vue-cli-service test:unit",
     "analyse-bundle": "yarn build && webpack-bundle-analyzer dist/stats.json",
     "build:serve": "BROWSERSLIST_ENV=debug DISABLE_MINIFY=1 VUE_APP_FORCE_VUE_DEVTOOLS=1 yarn build && servor dist/ index.html --no-browser",
@@ -21,32 +22,24 @@
     "@sentry/browser": "^6.17.9",
     "@sentry/integrations": "^6.17.9",
     "base64-js": "^1.3.1",
-    "comlink": "4.2.0",
+    "comlink": "^4.3.1",
     "dayjs": "^1.8.26",
     "dms2dec": "^1.1.0",
-    "elliptic": "^6.5.4",
     "exif-js": "git+https://github.com/ternandsparrow/exif-js.git#gh-63-outside-bounds",
     "exif-reader": "^1.0.3",
     "fetch-retry": "^2.2.3",
     "formdata-polyfill": "https://github.com/ternandsparrow/FormData#safari13.1-attempt2-installable",
     "fuse.js": "^5.0.10-beta",
     "gmap-vue": "^3.5.2",
-    "highlight.js": "^10.4.1",
-    "http-proxy": "^1.18.1",
-    "ini": "^1.3.7",
-    "is-svg": "^4.2.2",
-    "is_js": "^0.9.0",
     "jwt-decode": "^2.2.0",
     "localforage": "ternandsparrow/localForage#gh-910",
     "lodash": "^4.17.11",
-    "node-notifier": "^8.0.1",
     "onsenui": "^2.12.0",
     "pkce-challenge": "^3.0.0",
     "pwacompat": "^2.0.9",
     "register-service-worker": "^1.6.2",
-    "sass": "^1.21.0",
+    "sass": "^1.52.1",
     "smoothscroll-polyfill": "^0.4.4",
-    "sockjs": "^0.3.20",
     "stackdriver-error-reporting-clientside-js-client": "https://github.com/ternandsparrow/stackdriver-error-reporting-clientside-js-client#v0.1.0",
     "uuid": "^3.3.3",
     "vue": "^2",
@@ -60,12 +53,11 @@
     "workbox-cli": "^6.5.3",
     "workbox-precaching": "^6.5.3",
     "workbox-routing": "^6.5.3",
-    "workbox-strategies": "^6.5.3",
-    "y18n": "^4.0.1"
+    "workbox-strategies": "^6.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
-    "@rollup/plugin-alias": "^3.1.1",
+    "@rollup/plugin-alias": "^3.1.9",
     "@sentry/webpack-plugin": "^1.8.0",
     "@types/lodash": "^4.14.132",
     "@vue/cli-plugin-babel": "~5.0.4",
@@ -91,7 +83,7 @@
     "jest": "^27.1.0",
     "nodemon": "^2.0.0",
     "prettier": "^2.6.2",
-    "rollup": "^2.33.1",
+    "rollup": "^2.75.4",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
@@ -108,11 +100,7 @@
   },
   "browserslist": {
     "production": [
-      "ChromeAndroid >= 60",
-      "FirefoxAndroid >= 55",
-      "iOS >= 11.3",
-      "safari >= 11.1",
-      "samsung >= 8.2"
+      "last 3 years"
     ],
     "debug": [
       "last 2 Chrome versions"
