--- a/package.json
+++ b/package.json
@@ -93,11 +93,6 @@
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-merge": "^4.2.1"
   },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
   "browserslist": {
     "production": [
       "last 3 years"
@@ -109,7 +104,6 @@
   "jest": {
     "moduleFileExtensions": [
       "js",
-      "jsx",
       "json",
       "vue",
       "mjs"
@@ -117,7 +111,7 @@
     "transform": {
       "^.+\\.vue$": "@vue/vue2-jest",
       ".+\\.(css|styl|less|sass|scss|svg|png|jpg|ttf|woff|woff2)$": "jest-transform-stub",
-      "^.+\\.(jsx?|mjs)$": "babel-jest"
+      "^.+\\.(js|mjs)$": "babel-jest"
     },
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/src/$1"
