--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ firebase-debug.log
 *.sw*
 
 scripts/current-version.js
-notes
+notes.md
 error-screenshots
 scripts/*-stats.txt
 scripts/inat-taxa-cache.json
