add SW endpoint to get queued UUIDs for isPossiblyStuck logic, merge obs-store-common into the worker, replace servor for something that works, start on handling SW calls when offline

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:resource-constrained": "IS_ENABLE_ESLINT=false IS_ENABLE_BUNDLE_ANALYZER=false IS_ENABLE_SOURCEMAPS=false yarn build",
     "test:unit": "vue-cli-service test:unit",
     "analyse-bundle": "yarn build && webpack-bundle-analyzer dist/stats.json",
-    "build:serve": "BROWSERSLIST_ENV=debug DISABLE_MINIFY=1 VUE_APP_FORCE_VUE_DEVTOOLS=1 yarn build && servor dist/ index.html --no-browser",
+    "build:serve": "BROWSERSLIST_ENV=debug DISABLE_MINIFY=1 VUE_APP_FORCE_VUE_DEVTOOLS=1 yarn build && static --spa -i index.html dist/",
     "build:serve:watch": "nodemon --ext vue,js,mjs,json --delay 2 --watch src --watch sw-src --watch package.json --exec bash -c 'yarn build:serve'",
     "firebase:deploy:ci": "doit() { firebase --non-interactive --token ${FIREBASE_TOKEN:?} deploy --only hosting:${1:?}; }; doit",
     "lint": "vue-cli-service lint src/ tests/ sw-src/",
@@ -81,6 +81,7 @@
     "favicons-webpack-plugin": "^5.0.2",
     "firebase-tools": "^6.10.0",
     "jest": "^27.1.0",
+    "node-static": "^0.7.11",
     "nodemon": "^2.0.0",
     "prettier": "^2.6.2",
     "rollup": "^2.75.4",
@@ -88,7 +89,6 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "sass-loader": "^13.0.0",
-    "servor": "^2.2.1",
     "vue-template-compiler": "^2",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-merge": "^4.2.1"
